tests/snapshots/end2end__squeeze_underfill_bottom_center.snap
---
source: tests/end2end.rs
assertion_line: 136
expression: frames.try_iter().last().unwrap()
---
captured piece:
x01234567890123456789012345678901234567890123456789012345678901234567890123456789x
0┌┤ Hello, wo ├┐                                                                 |
1│A very long  │                                                                 |
2└─────────────┘                                                                 |
3                                                                                |
4                                                                                |
5                                                                                |
6                                                                                |
7                                                                                |
8                                                                                |
9                                                                                |
0                                                                                |
1                                                                                |
2                                                                                |
3                                                                                |
4                                                                                |
5                                                                                |
6                                                                                |
7                                                                                |
8                                                                                |
9                                                                                |
0                                                                                |
1                                                                                |
2                                                                                |
3                                                                                |
x--------------------------------------------------------------------------------x

